--- a/supermark/extensions/button/button.css
+++ b/supermark/extensions/button/button.css
@@ -3,7 +3,7 @@ a.ntnu-button {
     background: #fff;
     color: #00509e;
     border: 1px solid #00509e;
-    border-color: #00509e !important
+    border-color: #00509e !important;
     border-style: solid !important;
     border-radius: 10rem;
     display: inline-block;
