--- a/supermark/extensions/checklistbox/checklistbox.css
+++ b/supermark/extensions/checklistbox/checklistbox.css
@@ -2,7 +2,8 @@ div.checklistbox {
   width: 18rem;
   float: right;
   padding: 10px;
-  margin-left: 10px;
+  margin-left: 30px;
+  margin-bottom: 30px;
   background-color: #EFF7FF;
   border-radius: 0px;
   border-top: 6px solid #00509e
