--- a/supermark/extensions/goals/goals.css
+++ b/supermark/extensions/goals/goals.css
@@ -17,8 +17,8 @@ div.goals ul li {
 div.goals ul li:before {
   content: '\f26a';
   font-family: bootstrap-icons !important;
-  font-size:20;
+  font-size: 20;
   float: left;
   margin-left: -1.5em;
-  color: #1481b8;
+  color: #00509e;
 }
