--- a/supermark/extensions/hints/hints.css
+++ b/supermark/extensions/hints/hints.css
@@ -1,6 +1,6 @@
 .w3collapsible {
-  background-color:#f0e9db;
-  color: #868279; 
+  background-color: #f0e9db;
+  color: #868279;
   padding: 8px 18px 8px 8px;
   cursor: pointer;
   width: 100%;
@@ -11,13 +11,14 @@
   font-size: 15px;
 }
 
-.w3active, .w3collapsible:hover {
+.w3active,
+.w3collapsible:hover {
   background-color: #f0e9cb;
 }
 
 .w3content {
   filter: blur(3px);
-  padding: 0 18px;
+  padding: 18px;
   display: block;
   overflow: hidden;
   background-color: #f3f3f3;
