--- a/supermark/extensions/boxes/boxes.css
+++ b/supermark/extensions/boxes/boxes.css
@@ -82,3 +82,12 @@ div.tip>*:first-child::before {
   content: '\f402';
   color: #75225E;
 }
+
+div.task {
+  background-color: #fae7e8;
+}
+
+div.task>*:first-child::before {
+  content: '\f5db';
+  color: #e45460;
+}
